# workout-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: supabase.py
backend/app/models/: __init__.py  exercise.py  routine.py  session.py  user.py
backend/app/routers/: ai.py  exercises.py  progress.py  routines.py  sessions.py
backend/app/seed/: exercises.json  loader.py  templates.py
backend/app/services/: ai_service.py  progress_service.py
backend/scripts/: download_exercise_images.py
backend/tests/: conftest.py  test_exercises.py  test_progress.py  test_sessions.py
docs/: plan.md  product_scope.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  client.ts  exercises.ts  progress.ts  routines.ts  sessions.ts
frontend/src/features/ai-sidebar/: AISidebar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: i18n.tsx
frontend/src/pages/: ActiveSession.tsx  Dashboard.tsx  Exercises.tsx  History.tsx  Login.tsx  Progress.tsx  ResetPassword.tsx  RoutineBuilder.tsx  Routines.tsx
tutorials/: tutorial.md  tutorial_2.md
